# picopi

./: .gitignore  README.md
pico/lib/: Makefile  picodefs.h
pico/tts/: CMakeLists.txt  Makefile  com_svox_picottsengine.cpp  langfiles.c  langfiles.h  main.c  main.cpp  tts_engine.c  tts_engine.h
